--- a/visualization.html
+++ b/visualization.html
@@ -36,8 +36,37 @@
             padding: 20px;
             min-height: 100vh;
             line-height: 1.6;
+            position: relative;
         }
 
+        .dashboard-button {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            background: var(--primary-color);
+            color: var(--text-primary);
+            padding: 15px 25px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            box-shadow: 0 4px 15px rgba(108, 92, 231, 0.3);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            z-index: 1000;
+        }
+
+        .dashboard-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(108, 92, 231, 0.5);
+            background: var(--secondary-color);
+        }
+
+        .dashboard-button svg {
+            width: 20px;
+            height: 20px;
+        }
         .container {
             max-width: 1400px;
             margin: 0 auto;
@@ -475,6 +504,15 @@
 </head>
 
 <body>
+    <a href="dashboard.html" class="dashboard-button">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="7" height="7"></rect>
+            <rect x="14" y="3" width="7" height="7"></rect>
+            <rect x="14" y="14" width="7" height="7"></rect>
+            <rect x="3" y="14" width="7" height="7"></rect>
+        </svg>
+        Dashboard
+    </a>
     <a href="live.html" class="live-button">
         <span class="live-dot"></span>
         AO VIVO
@@ -590,8 +628,6 @@
 
             // Métricas base (mantendo a formatação original)
             const metrics = [
-                { name: 'Over 1.5 HT', value: (stats.over1_5HT / totalGames) * 100, raw: `${stats.over1_5HT}/${totalGames}`, icon: '⚽' },
-                { name: 'Over 2.5 HT', value: (stats.over2_5HT / totalGames) * 100, raw: `${stats.over2_5HT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 2.5 FT', value: (stats.over2_5FT / totalGames) * 100, raw: `${stats.over2_5FT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 3.5 FT', value: (stats.over3_5FT / totalGames) * 100, raw: `${stats.over3_5FT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 4.5 FT', value: (stats.over4_5FT / totalGames) * 100, raw: `${stats.over4_5FT}/${totalGames}`, icon: '⚽' }
@@ -601,33 +637,33 @@
             const homeWinRate = (stats.winHome / totalGames) * 100;
             const awayWinRate = (stats.winAway / totalGames) * 100;
 
-            // Encontra métricas com alta probabilidade (acima de 80%)
-            const highProbMetrics = metrics.filter(metric => metric.value >= 80);
-
             let finalMetrics = [];
 
             // Adiciona métricas regulares com alta probabilidade
-            finalMetrics.push(...metrics.filter(m => m.value >= 80));
+            const highProbMetrics = metrics.filter(metric => metric.value >= 80);
+            finalMetrics.push(...highProbMetrics);
 
             // Adiciona análise especial dos jogadores
             if (highProbMetrics.length > 0) {
                 const bestMetric = highProbMetrics[0];
                 if (homeWinRate >= 35) {
                     finalMetrics.push({
-                        name: `${homePlayer} - ${bestMetric.name}`,  // Changed format here
+                        name: `${homePlayer}`,
                         value: homeWinRate,
                         raw: `${stats.winHome}/${totalGames}`,
                         isSpecial: true,
-                        icon: '👑'
+                        icon: '👑',
+                        description: bestMetric.name
                     });
                 }
                 if (awayWinRate >= 35) {
                     finalMetrics.push({
-                        name: `${awayPlayer} - ${bestMetric.name}`,  // Changed format here
+                        name: `${awayPlayer}`,
                         value: awayWinRate,
                         raw: `${stats.winAway}/${totalGames}`,
                         isSpecial: true,
-                        icon: '👑'
+                        icon: '👑',
+                        description: bestMetric.name
                     });
                 }
             }
@@ -647,7 +683,7 @@
                 const response = await fetch(apiUrl);
                 const data = await response.json();
                 const h2hStats = processH2HStats(data.mutualInfos.lastGames);
-                return getTop3Metrics(h2hStats);
+                return getTop3Metrics(h2hStats, homePlayer, awayPlayer);
             } catch (error) {
                 console.error('Erro ao buscar métricas H2H:', error);
                 return null;
