--- a/visualization.html
+++ b/visualization.html
@@ -425,7 +425,7 @@
             padding: 12px 25px;
             border-radius: 25px;
             position: fixed;
-            top: 20px;
+            top: 80px;
             right: 20px;
             text-decoration: none;
             font-weight: 600;
@@ -434,8 +434,9 @@
             align-items: center;
             gap: 10px;
             transition: all 0.3s ease;
-            z-index: 1000;
+            z-index: 100;
             border: none;
+            box-shadow: 0 4px 15px rgba(255, 71, 87, 0.3);
         }
 
         .live-button:hover {
