--- a/NBA.html
+++ b/NBA.html
@@ -889,3 +889,37 @@
 </body>
 
 </html>
+
+<style>
+    .nav-buttons {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .viz-button {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px 15px;
+        background: linear-gradient(145deg, #1c1c1c, #2a004d);
+        border-radius: 8px;
+        color: #ffffff;
+        text-decoration: none;
+        font-family: 'Orbitron', sans-serif;
+        font-size: 14px;
+        transition: all 0.3s ease;
+        border: 1px solid #8B00FF;
+    }
+
+    .viz-button:hover {
+        background: linear-gradient(45deg, #8B00FF, #00DDEB);
+        box-shadow: 0 0 15px rgba(139, 0, 255, 0.7);
+        transform: translateY(-2px);
+    }
+
+    .viz-button svg {
+        width: 20px;
+        height: 20px;
+    }
+</style>
