--- a/NBA.html
+++ b/NBA.html
@@ -895,27 +895,33 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        position: relative;
+        z-index: 10;
     }
 
     .viz-button {
         display: flex;
         align-items: center;
         gap: 8px;
-        padding: 10px 15px;
+        padding: 12px 20px;
         background: linear-gradient(145deg, #1c1c1c, #2a004d);
-        border-radius: 8px;
+        border-radius: 12px;
         color: #ffffff;
         text-decoration: none;
         font-family: 'Orbitron', sans-serif;
         font-size: 14px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
         transition: all 0.3s ease;
         border: 1px solid #8B00FF;
+        box-shadow: 0 0 10px rgba(139, 0, 255, 0.3);
     }
 
     .viz-button:hover {
         background: linear-gradient(45deg, #8B00FF, #00DDEB);
-        box-shadow: 0 0 15px rgba(139, 0, 255, 0.7);
-        transform: translateY(-2px);
+        box-shadow: 0 0 20px rgba(139, 0, 255, 0.8);
+        transform: translateY(-2px) scale(1.02);
+        border-color: #00DDEB;
     }
 
     .viz-button svg {
