--- a/NBA.html
+++ b/NBA.html
@@ -895,7 +895,9 @@
         display: flex;
         align-items: center;
         gap: 20px;
-        position: relative;
+        position: absolute;
+        top: 20px;
+        right: 20px;
         z-index: 10;
     }
 
